# fitnessitybot

./: LICENSE  README.md  pyproject.toml
src/fitnessity_bot/: __init__.py  index.py
